--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-Hello there! How are you? 
-git-sync! side car
+<img src="https://www.redhat.com/cms/managed-files/Brand_Standars-Red_Hat-_color_on-darkgray.svg?itok=OMKEYTam" alt="Trulli" width="500" height="333">
 </body>
 </html>
