--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <img src="https://www.redhat.com/cms/managed-files/Brand_Standars-Red_Hat-_color_on-darkgray.svg?itok=OMKEYTam" alt="Trulli" width="500" height="333">
+ REDHAT
 </body>
 </html>
