--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-<img src="https://www.redhat.com/cms/managed-files/Brand_Standars-Red_Hat-_color_on-darkgray.svg?itok=OMKEYTam" alt="Trulli" width="500" height="333">
- REDHAT
+<img src="https://d1.awsstatic.com/PAC/kuberneteslogo.eabc6359f48c8e30b7a138c18177f3fd39338e05.png" alt="Trulli" width="500" height="333">
 </body>
 </html>
