--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <img src="https://d1.awsstatic.com/PAC/kuberneteslogo.eabc6359f48c8e30b7a138c18177f3fd39338e05.png" alt="Trulli" width="500" height="333">
+<img src="https://res.cloudinary.com/gremlin/image/upload/t_default,f_auto/1024px-kubernetes_logo.png" alt="Trulli" width="500" height="333">
 </body>
 </html>
